GeneUtils: PanelBuilder: fixes and improvements